--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -24,6 +24,18 @@
 		<h3>AJR-Weak</h3>
 		<iframe width="360" height="215" src="https://www.youtube.com/embed/UcN32n-Cd10" frameborder="0" allowfullscreen></iframe>
 		<h1>Google Map</h1>
+		<div id="google_translate_element"></div>
+		<script type="text/javascript">
+			function googleTranslateElementInit() {
+			new google.translate.TranslateElement({pageLanguage: 'en'}),
+			'google_translate_element');
+			}
+		</script>
+
+		<script type="text/javascript"
+		scr="//translate.google.com/translate_a/element.js?
+		cb=googleTranslateElementInit"></script>
+		
 		<h2>South Korea</h2>
 		-code-
 		-one more thing that we did no demo in the workshop
