--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -4,7 +4,7 @@
 	<title>Original Work 1</title>
 	<style type="text/css">
 	body {
-		background-color: pink;
+		background-color: lightblue;
 	}
 	h1 {
 		color: white;
@@ -19,23 +19,23 @@
 	<body>
 
 		<h1>NEWBIE LEVEL</h1>
-		<p>hey</p>
+		<p></p>
 		<h1>Youtube video</h1>
 		<h3>AJR-Weak</h3>
 		<iframe width="360" height="215" src="https://www.youtube.com/embed/UcN32n-Cd10" frameborder="0" allowfullscreen></iframe>
 		<h1>Google Map</h1>
-		<div id="google_translate_element"></div>
-		<script type="text/javascript">
-			function googleTranslateElementInit() {
-			new google.translate.TranslateElement({pageLanguage: 'en'}),
-			'google_translate_element');
-			}
+		<div id="Map" 
+		style="width:400px;height: 400px;background:magenta"></div>
+		<script>
+		function myMap() {
+			var mapCanvas = 
+		document.getElementById("map");
+            var mapOptions = {
+            	center: new google.maps.LatLng(51.5,-0.2), zoom: 10
+            };
+            var map = new google.maps.Map(mapCanvas,mapOptions);		
+		}
 		</script>
-
-		<script type="text/javascript"
-		scr="//translate.google.com/translate_a/element.js?
-		cb=googleTranslateElementInit"></script>
-		
 		<h2>South Korea</h2>
 		-code-
 		-one more thing that we did no demo in the workshop
