--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -4,7 +4,7 @@
 	<title>Original Work 1</title>
 	<style type="text/css">
 	body {
-		background-color: lightblue;
+		background-color: pink;
 	}
 	h1 {
 		color: white;
@@ -25,7 +25,7 @@
 		<iframe width="360" height="215" src="https://www.youtube.com/embed/UcN32n-Cd10" frameborder="0" allowfullscreen></iframe>
 		<h1>Google Map</h1>
 		<div id="Map" 
-		style="width:400px;height: 400px;background:magenta"></div>
+		style="width:400px;height: 400px;background:lightblue"></div>
 		<script>
 		function myMap() {
 			var mapCanvas = 
@@ -36,6 +36,10 @@
             var map = new google.maps.Map(mapCanvas,mapOptions);		
 		}
 		</script>
+
+		<script 
+		scr="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu-916DdpKAjTmJNIgngS6HL_kDIKU0aU&callback=myMap"></script>
+
 		<h2>South Korea</h2>
 		-code-
 		-one more thing that we did no demo in the workshop
