--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -38,7 +38,7 @@
 		</script>
 
 		<script 
-		scr="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu-916DdpKAjTmJNIgngS6HL_kDIKU0aU&callback=myMap"></script>
+		scr= "https://www.google.com/maps/place/Myeong-dong,+Jung-gu,+Seoul,+South+Korea/@37.5615843,126.9646129,14z/data=!3m1!4b1!4m5!3m4!1s0x357ca2f11b3f14ab:0x3b436be085e38e0c!8m2!3d37.55998!4d126.9858296"></script>
 
 		<h2>South Korea</h2>
 		-code-
