--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -37,9 +37,7 @@
 		}
 		</script>
 
-		<script 
-		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d33626.57663757054!2d126.96829291999738!3d37.564372386249225!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357ca2f11b3f14ab%3A0x3b436be085e38e0c!2sMyeong-dong%2C+Jung-gu%2C+Seoul%2C+South+Korea!5e0!3m2!1sen!2sus!4v1484436142426" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-		</script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu-916DdpKAjTmJNIgngS6HL_kDIKU0aU&callback=myMap"></script>
 		
 		<h2>South Korea</h2>
 		-code-
