--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -10,6 +10,10 @@
 		color: white;
 		text-align: left;
 	}
+	h2 {
+		color: green;
+		text-align: left;
+	}
 	p{
 		font-family: verdana;
 		font-size: : 20px;
