--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -18,7 +18,6 @@
 		font-family: verdana;
 		font-size: : 20px;
 	}
-}
 	</style>
 	</head>
 	<body>
@@ -30,22 +29,10 @@
 		<iframe width="360" height="215" src="https://www.youtube.com/embed/UcN32n-Cd10" frameborder="0" allowfullscreen></iframe>
 		<h1>Google Map</h1>
 		<h2>South Korea</h2>
-		<div id="Map" 
-		style="width:400px;height: 400px;background:lightblue"></div>
-		<script>
-		function myMap() {
-			var mapCanvas = 
-		document.getElementById("map");
-            var mapOptions = {
-            	center: new google.maps.LatLng(51.5,-0.2), zoom: 10
-            };
-            var map = new google.maps.Map(mapCanvas,mapOptions);		
-		}
-		</script>
-
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu-916DdpKAjTmJNIgngS6HL_kDIKU0aU&callback=myMap"></script>
-		
-		
+		<div id="map">
+		<iframe src=""><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12650.89844031282!2d126.98207964999997!3d37.56155155!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357ca2f11b3f14ab%3A0x3b436be085e38e0c!2sMyeong-dong%2C+Jung-gu%2C+Seoul%2C+South+Korea!5e0!3m2!1sen!2sus!4v1484546865079" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+		</iframe>div>
+		<p>This is a map of a city in Korea that is famous for tourists</p
 		<h1>APPRENTICE LEVEL</h1>
 		<h1>Youtube video</h1>
 		<h2>code</h2>
